--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
-		"axios": "^1.4.0",
+		"axios": "^0.20.0",
 		"mui": "0.0.1",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
 		"react-flip-move": "^3.0.4",
 		"react-router-dom": "^5.3.3",
-		"react-scripts": "^5.0.1",
+		"react-scripts": "3.4.3",
 		"react-text-truncate": "^0.16.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+		"build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
