--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "hulu-clone",
 	"version": "0.1.0",
+	"homepage": "https://ptcoetser.github.io/hulu-clone/",
 	"private": true,
 	"dependencies": {
 		"@material-ui/core": "^4.12.4",
@@ -8,18 +9,23 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
-		"axios": "^0.20.0",
+		"axios": "^1.4.0",
 		"mui": "0.0.1",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
 		"react-flip-move": "^3.0.4",
 		"react-router-dom": "^5.3.3",
-		"react-scripts": "3.4.3",
+		"react-scripts": "^5.0.1",
 		"react-text-truncate": "^0.16.0"
 	},
+	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+	},
 	"scripts": {
-		"start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-		"build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
@@ -40,5 +46,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^6.0.0"
 	}
 }
