--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react-text-truncate": "^0.16.0"
 	},
 	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"gh-pages": "^6.0.0"
 	},
 	"scripts": {
 		"predeploy": "npm run build",
@@ -46,8 +47,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"gh-pages": "^6.0.0"
 	}
 }
