--- a/.github/workflows/node-cli.yml
+++ b/.github/workflows/node-cli.yml
@@ -1,11 +1,13 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: CI/CD
 
 on:
   push:
     branches: [master]
+  # pull_request:
+  #   branches: [master]
 
 jobs:
   build:
@@ -13,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x]
 
     steps:
       - name: Checkout repository
@@ -22,13 +24,10 @@ jobs:
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-        node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm install
-
-      - name: Run the tests
-        run: npm test
 
       - name: Build
         run: npm run build
